# CUDA_Programming_Practice

./: .gitignore  README.md  starter_code.cu
MP1/: README.md
MP1/include/: kernels.cuh
MP1/src/: common.cu  kernels.cu  main.cpp
hello_world_cuda/: CMakeLists.txt  README.md
hello_world_cuda/include/: kernels.cuh
hello_world_cuda/src/: common.cu  kernels.cu  main.cpp
